Wrote navigation bar basic HTML

--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        
+        <!-- Navigation Section -->
+         <section class="nav-container">
+            <div class="nav-content">
+                <h1>Coffee</h1>
+                <ul>
+                    <li class="nav-link"><a href="#home">Home</a></li>
+                    <li class="nav-link"><a href="#about">About</a></li>
+                    <li class="nav-link"><a href="#menu">Menu</a></li>
+                    <li class="nav-link"><a href="#brand">Brand</a></li>
+                    <li class="nav-link"><a href="#gallery">Gallery</a></li>
+                    <li class="nav-link"><a href="#contact">Contact</a></li>
+                </ul>
+            </div>
+         </section>
     </body>
 </html>
