Added basic navigation bar styles

--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
     </head>
     <body>
         <!-- Navigation Section -->
-         <section class="nav-container">
-            <div class="nav-content">
-                <h1>Coffee</h1>
+        <section class="navbar-container">
+            <header class="navbar-content">
+                <h1 class="heading">Coffee</h1>
                 <ul>
-                    <li class="nav-link"><a href="#home">Home</a></li>
-                    <li class="nav-link"><a href="#about">About</a></li>
-                    <li class="nav-link"><a href="#menu">Menu</a></li>
-                    <li class="nav-link"><a href="#brand">Brand</a></li>
-                    <li class="nav-link"><a href="#gallery">Gallery</a></li>
-                    <li class="nav-link"><a href="#contact">Contact</a></li>
+                    <li><a href="#home" class="nav-link">Home</a></li>
+                    <li><a href="#about" class="nav-link">About</a></li>
+                    <li><a href="#menu" class="nav-link">Menu</a></li>
+                    <li><a href="#brand" class="nav-link">Brand</a></li>
+                    <li><a href="#gallery" class="nav-link">Gallery</a></li>
+                    <li><a href="#contact" class="nav-link">Contact</a></li>
                 </ul>
-            </div>
-         </section>
+            </header>
+        </section>
     </body>
 </html>
