Wrote hero section's left side contents HTML

--- a/index.html
+++ b/index.html
@@ -21,5 +21,18 @@
                 </ul>
             </header>
         </section>
+
+        <!-- Hero Section -->
+         <section class="Hero">
+            <div class="left-section">
+                <h2 class="heading">Best Coffee</h2>
+                <h2 class="note">Make your day great with our special coffee!</h2>
+                <p class="hero-discription">Welcome to our coffee paradise, where every bean tells a story and every cup sparks joy.</p>
+                <div class="btn">
+                    <a href="#menu" class="hero-button"><button type="button" class="hero-btn">Order Now</button></a>
+                    <a href="#contact" class="hero-button"><button type="button" class="hero-btn">Cantact Us</button></a>
+                </div>
+            </div>
+         </section>
     </body>
 </html>
