wrote hero section's right side cintent HTML and added hero section basic styles

--- a/index.html
+++ b/index.html
@@ -23,15 +23,16 @@
         </section>
 
         <!-- Hero Section -->
-         <section class="Hero">
+         <section class="hero" id="hero">
             <div class="left-section">
                 <h2 class="heading">Best Coffee</h2>
                 <h2 class="note">Make your day great with our special coffee!</h2>
                 <p class="hero-discription">Welcome to our coffee paradise, where every bean tells a story and every cup sparks joy.</p>
-                <div class="btn">
-                    <a href="#menu" class="hero-button"><button type="button" class="hero-btn">Order Now</button></a>
-                    <a href="#contact" class="hero-button"><button type="button" class="hero-btn">Cantact Us</button></a>
-                </div>
+                <a href="#menu" class="hero-button"><button type="button" class="hero-btn">Order Now</button></a>
+                <a href="#contact" class="hero-button"><button type="button" class="hero-btn">Cantact Us</button></a>
+            </div>
+            <div class="right-section">
+                <img class="hero-img" src="Images/Hero.png" alt="A cup of coffee with splash">
             </div>
          </section>
     </body>
