Added text colors and button styles

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <!-- Navigation Section -->
         <section class="navbar-container">
             <header class="navbar-content">
-                <h1 class="heading">Coffee</h1>
+                <h1 class="nav-heading">Coffee</h1>
                 <ul>
                     <li><a href="#home" class="nav-link">Home</a></li>
                     <li><a href="#about" class="nav-link">About</a></li>
@@ -25,7 +25,7 @@
         <!-- Hero Section -->
          <section class="hero" id="hero">
             <div class="left-section">
-                <h2 class="heading">Best Coffee</h2>
+                <h2 class="hero-heading">Best Coffee</h2>
                 <h2 class="note">Make your day great with our special coffee!</h2>
                 <p class="hero-discription">Welcome to our coffee paradise, where every bean tells a story and every cup sparks joy.</p>
                 <a href="#menu" class="hero-button"><button type="button" class="hero-btn">Order Now</button></a>
