Added button effect

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </section>
 
         <!-- Hero Section -->
-         <section class="hero" id="hero">
+         <section class="hero" id="home">
             <div class="left-section">
                 <h2 class="hero-heading">Best Coffee</h2>
                 <h2 class="note">Make your day great with our special coffee!</h2>
