Align about us contents

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="about-image">
                 <img class="about-img" src="Images/About.png" alt="A Cup of coffee">
             </div>
-            <div class="about content">
+            <div class="about-content">
                 <h2 class="about-heading">ABOUT US</h2>
                 <span class="about-span"></span>
                 <p class="about-discription">
