Wrote menu section basic HTML and added menu images

--- a/index.html
+++ b/index.html
@@ -43,10 +43,36 @@
             </div>
             <div class="about-content">
                 <h2 class="about-heading">ABOUT US</h2>
-                <span class="about-span"></span>
+                <span class="span"></span>
                 <p class="about-discription">
                     At Coffee House in Berndorf, Germany, we pride ourselves on being a go-to destination for coffee lovers and conversation seekers alike.We're dedicated to providing an exceptional coffee experience in a cozy and inviting atmosphere, where guests can relax, unwind, and enjoy their time in comfort.
                 </p>
+            </div>
+        </section>
+
+        <!-- Menu Section -->
+        <section class="menu" id="menu">
+            <h2 class="menu-heading">OUR MENU</h2>
+            <span></span>
+            <div class="menu-items">
+                <div class="food">
+                    <img src="Images/menu-1.webp" alt="Hot Beverages Image" class="menu-img">
+                </div>
+                <div class="food">
+                    <img src="Images/menu-2.png" alt="Cold Beverages Image" class="menu-img">
+                </div>
+                <div class="food">
+                    <img src="Images/menu-3.png" alt="Refreshment Juice Image" class="menu-img">
+                </div>
+                <div class="food">
+                    <img src="Images/menu-4.png" alt="Special Combos Image" class="menu-img">
+                </div>
+                <div class="food">
+                    <img src="Images/menu-5.png" alt="Dessert Image" class="menu-img">
+                </div>
+                <div class="food">
+                    <img src="Images/menu-6.png" alt="Burger & French Fries Image" class="menu-img">
+                </div>
             </div>
         </section>
     </body>
