Wrote brand section HTML

--- a/index.html
+++ b/index.html
@@ -87,5 +87,18 @@
                 </div>
             </div>
         </section>
+
+        <!-- Brand Section -->
+        <section class="brand" id="brand">
+            <h2 class="brand-heading">OUR TRUSTED BRAND</h2>
+            <span></span>
+            <div class="brand-images">
+                <img src="Images/brandImg1.png" alt="A Coffee Brand Logo" class="brand-img">
+                <img src="Images/brandImg2.png" alt="A Coffee Brand Logo" class="brand-img">
+                <img src="Images/brandImg3.png" alt="A Coffee Brand Logo" class="brand-img">
+                <img src="Images/brandImg4.png" alt="A Coffee Brand Logo" class="brand-img">
+                <img src="Images/brandImg5.png" alt="A Coffee Brand Logo" class="brand-img">
+            </div>
+        </section>
     </body>
 </html>
