Wrote gallery section HTML

--- a/index.html
+++ b/index.html
@@ -100,5 +100,29 @@
                 <img src="Images/brandImg5.png" alt="A Coffee Brand Logo" class="brand-img">
             </div>
         </section>
+
+        <!-- Gallery Section -->
+        <section class="gallery" id="gallery">
+            <h1 class="gallery-heading">GALLERY</h1>
+            <span></span>
+            <div class="gallery-images">
+                <img src="Images/gallery-1.jpg" alt="Our Food Products" class="gallery-img">
+                <img src="Images/gallery-2.jpg" alt="Our Food Products" class="gallery-img">
+                <img src="Images/gallery-3.jpg" alt="Our Food Products" class="gallery-img">
+                <img src="Images/gallery-4.jpg" alt="Our Food Products" class="gallery-img">
+                <img src="Images/gallery-5.jpg" alt="Our Food Products" class="gallery-img">
+                <img src="Images/gallery-6.jpg" alt="Our Food Products" class="gallery-img">
+                <img src="Images/gallery-7.jpg" alt="Our Food Products" class="gallery-img">
+                <img src="Images/gallery-8.jpg" alt="Our Food Products" class="gallery-img">
+                <img src="Images/gallery-9.jpg" alt="Our Food Products" class="gallery-img">
+                <img src="Images/gallery-10.jpg" alt="Our Food Products" class="gallery-img">
+                <img src="Images/gallery-11.jpg" alt="Our Food Products" class="gallery-img">
+                <img src="Images/gallery-12.jpg" alt="Our Food Products" class="gallery-img">
+                <img src="Images/gallery-13.jpg" alt="Our Food Products" class="gallery-img">
+                <img src="Images/gallery-14.jpg" alt="Our Food Products" class="gallery-img">
+                <img src="Images/gallery-15.jpg" alt="Our Food Products" class="gallery-img">
+                <img src="Images/gallery-16.jpg" alt="Our Food Products" class="gallery-img">
+            </div>
+        </section>
     </body>
 </html>
