Wrote contact us section left side content HTML

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
         <!-- Gallery Section -->
         <section class="gallery" id="gallery">
-            <h1 class="gallery-heading">GALLERY</h1>
+            <h2 class="gallery-heading">GALLERY</h2>
             <span></span>
             <div class="gallery-images">
                 <img src="Images/gallery-1.jpg" alt="Our Food Products" class="gallery-img">
@@ -122,6 +122,21 @@
                 <img src="Images/gallery-14.jpg" alt="Our Food Products" class="gallery-img">
                 <img src="Images/gallery-15.jpg" alt="Our Food Products" class="gallery-img">
                 <img src="Images/gallery-16.jpg" alt="Our Food Products" class="gallery-img">
+            </div>
+        </section>
+
+        <!-- Contact Us Section -->
+        <section class="contact" id="contact">
+            <h2 class="conatct-heading">CONTACT US</h2>
+            <span></span>
+            <div class="contact-left">
+                <p class="contact-discription">No57, 2nd Cross Street Vavuniya, Srilanka.</p>
+                <p class="contact-discription">info@coffeeshopwebsite.com</p>
+                <p class="contact-discription">+94 112 233 445</p>
+                <p class="contact-discription">Monday - Friday:9:00 AM - 3:00 PM</p>
+                <p class="contact-discription">Saturday:10:00 AM - 3:00 PM</p>
+                <p class="contact-discription">Sunday: Closed</p>
+                <p class="contact-discription">www.Coffeeshop.com</p>
             </div>
         </section>
     </body>
