Wrote contact section right side form HTML

--- a/index.html
+++ b/index.html
@@ -138,6 +138,13 @@
                 <p class="contact-discription">Sunday: Closed</p>
                 <p class="contact-discription">www.Coffeeshop.com</p>
             </div>
+            <form class="contact-right">
+                <input type="text" class="form personal" placeholder="Your Name">
+                <input type="number" class="form personal" placeholder="Your Mobile">
+                <input type="text" class="form personal" placeholder="Your E-mail">
+                <textarea class="form textarea"></textarea>
+                <button type="button" class="form-btn" >Submit</button>
+            </form>
         </section>
     </body>
 </html>
