Added contact us section basic styles

--- a/index.html
+++ b/index.html
@@ -129,22 +129,24 @@
         <section class="contact" id="contact">
             <h2 class="conatct-heading">CONTACT US</h2>
             <span></span>
-            <div class="contact-left">
-                <p class="contact-discription">No57, 2nd Cross Street Vavuniya, Srilanka.</p>
-                <p class="contact-discription">info@coffeeshopwebsite.com</p>
-                <p class="contact-discription">+94 112 233 445</p>
-                <p class="contact-discription">Monday - Friday:9:00 AM - 3:00 PM</p>
-                <p class="contact-discription">Saturday:10:00 AM - 3:00 PM</p>
-                <p class="contact-discription">Sunday: Closed</p>
-                <p class="contact-discription">www.Coffeeshop.com</p>
+            <div class="contact-content">
+                <div class="contact-left">
+                    <p class="contact-discription">No57, 2nd Cross Street Vavuniya, Srilanka.</p>
+                    <p class="contact-discription">info@coffeeshopwebsite.com</p>
+                    <p class="contact-discription">+94 112 233 445</p>
+                    <p class="contact-discription">Monday - Friday:9:00 AM - 3:00 PM</p>
+                    <p class="contact-discription">Saturday:10:00 AM - 3:00 PM</p>
+                    <p class="contact-discription">Sunday: Closed</p>
+                    <p class="contact-discription">www.Coffeeshop.com</p>
+                </div>
+                <form class="contact-right">
+                    <input type="text" class="form personal" placeholder="Your Name">
+                    <input type="number" class="form personal" placeholder="Your Mobile">
+                    <input type="text" class="form personal" placeholder="Your E-mail">
+                    <textarea class="form textarea" placeholder="Your Message"></textarea>
+                    <button type="button" class="form-btn" >Submit</button>
+                </form>
             </div>
-            <form class="contact-right">
-                <input type="text" class="form personal" placeholder="Your Name">
-                <input type="number" class="form personal" placeholder="Your Mobile">
-                <input type="text" class="form personal" placeholder="Your E-mail">
-                <textarea class="form textarea"></textarea>
-                <button type="button" class="form-btn" >Submit</button>
-            </form>
         </section>
     </body>
 </html>
