Align contact us section

--- a/index.html
+++ b/index.html
@@ -127,8 +127,10 @@
 
         <!-- Contact Us Section -->
         <section class="contact" id="contact">
-            <h2 class="conatct-heading">CONTACT US</h2>
-            <span></span>
+            <div class="contact-top">
+                <h2 class="conatct-heading">CONTACT US</h2>
+                <span></span>
+            </div>
             <div class="contact-content">
                 <div class="contact-left">
                     <p class="contact-discription">No57, 2nd Cross Street Vavuniya, Srilanka.</p>
