Added text colors

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <!-- Contact Us Section -->
         <section class="contact" id="contact">
             <div class="contact-top">
-                <h2 class="conatct-heading">CONTACT US</h2>
+                <h2 class="contact-heading">CONTACT US</h2>
                 <span></span>
             </div>
             <div class="contact-content">
