Finished footer section

--- a/index.html
+++ b/index.html
@@ -150,5 +150,10 @@
                 </form>
             </div>
         </section>
+
+        <!-- Footer Section -->
+        <footer class="footer">
+            <p>&COPY; All rights reserved</p>
+        </footer>
     </body>
 </html>
