--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Assignment 07</title>
         <link rel="stylesheet" href="style.css">
-    </head>
     <body>
         <!-- Navigation Section -->
         <section class="navbar-container">
             <header class="navbar-content">
-                <h1 class="nav-heading">Coffee</h1>
+                <div class="logo">
+                    <img class="navbar-img" src="https://cdn.pixabay.com/photo/2013/07/13/09/51/drink-156144_1280.png" alt="Coffee">
+                    <h1 class="nav-heading">Coffee</h1>
+                </div>
                 <ul>
                     <li><a href="#home" class="nav-link">Home</a></li>
                     <li><a href="#about" class="nav-link">About</a></li>
@@ -136,9 +138,9 @@
                     <p class="contact-discription">No57, 2nd Cross Street Vavuniya, Srilanka.</p>
                     <p class="contact-discription">info@coffeeshopwebsite.com</p>
                     <p class="contact-discription">+94 112 233 445</p>
-                    <p class="contact-discription">Monday - Friday:9:00 AM - 3:00 PM</p>
-                    <p class="contact-discription">Saturday:10:00 AM - 3:00 PM</p>
-                    <p class="contact-discription">Sunday: Closed</p>
+                    <p class="contact-discription">Monday - Friday : 9:00 AM - 3:00 PM</p>
+                    <p class="contact-discription">Saturday : 10:00 AM - 3:00 PM</p>
+                    <p class="contact-discription">Sunday : Closed</p>
                     <p class="contact-discription">www.Coffeeshop.com</p>
                 </div>
                 <form class="contact-right">
