Added coffee emoji

--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
         <section class="navbar-container">
             <header class="navbar-content">
                 <div class="logo">
-                    <img class="navbar-img" src="https://cdn.pixabay.com/photo/2013/07/13/09/51/drink-156144_1280.png" alt="Coffee">
-                    <h1 class="nav-heading">Coffee</h1>
-                </div>
+                    <h1 class="nav-heading">☕Coffee</h1>
+                </div>~
                 <ul>
                     <li><a href="#home" class="nav-link">Home</a></li>
                     <li><a href="#about" class="nav-link">About</a></li>
